--- a/template.tex
+++ b/template.tex
@@ -14,6 +14,7 @@
 \usepackage{listings}
 \usepackage{enumitem}
 \usepackage{caption}
+\usepackage{indentfirst}
 \lstset{basicstyle=\ttfamily, frame=single}
 
 \kthlogo{kth_eng_cmyk}
