--- a/poster.tex
+++ b/poster.tex
@@ -33,7 +33,7 @@ backend=bibtex,
 sorting=none,
 sortcites,
 maxcitenames=2, mincitenames=1]{biblatex}
-\AtBeginBibliography{\small}
+\AtBeginBibliography{\footnotesize}
 \addbibresource{bibliography.bib}
 
 
@@ -54,7 +54,7 @@ maxcitenames=2, mincitenames=1]{biblatex}
                 \section{Abstract}
                 Benchmarking human-in-the-loop application is complex given their nature, which heavily depends on the actions taken by the \emph{human} user.
                 This limits reproducibility as well as feasibility of performance evaluations.
-                We propose a methodology and present a benchmarking suite we call EdgeDroid  that can address these challenges.
+                We propose a methodology and present a benchmarking suite that can address these challenges.
                 Our core idea rests on recording traces of these applications which are played out in a controlled fashion based on an underlying model of human behavior.
                 The traces are then exposed to the original backend compute process of the respective human-in-the-loop application, generating realistic feedback.
                 This allows for an automated system which greatly simplifies benchmarking large scale scenarios.
@@ -82,23 +82,25 @@ maxcitenames=2, mincitenames=1]{biblatex}
                 
             \end{pframe}
         \end{pcolumn}%
-        \begin{pcolumn}[3]
-            \begin{pframe}[1.4]
+        \begin{pcolumn}[2]
+            \begin{pframe}[1.1]
                 \section{Design \& Implementation}
                 \begin{center}
                     \medskip
                     \includegraphics[width=\linewidth]{img/TraceReplay_GenArch}
-                    \captionof{figure}{EdgeDroid Architecture}
+                    \captionof{figure}{Suite Architecture}
                     \medskip
                 \end{center}
-                
-                The architecture of our benchmarking suite consists of two main components:
+
                 \begin{itemize}
                     \item The \emph{control backend} controls the experiments and collects measurements from the application and the cloudlet itself.
                     \item The \emph{client emulators} play out a prerecorded sensory input trace over the network in a controlled fashion, while collecting client-side metrics.
                 \end{itemize}
+            
+                The client emulators in particular will be showcased in the \textsc{demo}.
+                We will demonstrate the workings of the system on a simple LEGO task assistance application, and spectators will be able to follow the replay of the trace as well as the behavior of the user model through the client devices.
             \end{pframe}
-            \begin{pframe}[1.36]
+            \begin{pframe}[.9]
                 \begin{center}
                     \medskip
                     \input{img/usermodel.tex}
@@ -108,14 +110,10 @@ maxcitenames=2, mincitenames=1]{biblatex}
                 The trace alone is not enough to sufficiently emulate a human user.
                 We implement thus a very simple user model in order to be able to react to feedback from the application and adapt our replay of the trace to the current system conditions.
                 We plan to fully parameterize the components of this model in the future, in order to be able to construct more realistic user models.
-            \end{pframe}
-            \begin{pframe}[.24]
-                We will eventually make the EdgeDroid suite available as Free and Open Source Software.
-                The traces will also be made available under Creative Commons.
-            \end{pframe}            
+            \end{pframe}        
         \end{pcolumn}%
-        \begin{pcolumn}[2]
-            \begin{pframe}[1.27]
+        \begin{pcolumn}[3]
+            \begin{pframe}[1.95]
                 \section{Some Example Results}
                 \begin{center}
                     \medskip
@@ -131,7 +129,12 @@ maxcitenames=2, mincitenames=1]{biblatex}
             
                  These results could be useful for, for instance, system designers wishing to identify bottlenecks across the system hardware stack, or for application developers to determine points of optimization in the application code.
             \end{pframe}
-            \begin{pframe**}
+            \begin{pframe}[.24]
+                \itshape
+                We will eventually make the benchmark suite available as Free and Open Source Software.
+                The traces will also be made available under a Creative Commons License.
+            \end{pframe}    
+            \begin{pframe**}[.81]
                 \nocite{*}
                 \small
                 \printbibliography
