--- a/poster.tex
+++ b/poster.tex
@@ -49,7 +49,7 @@ mincitenames=1]{biblatex}
     
     \title{\LARGE\bfseries Scaling on the Edge:\\A Benchmarking Suite For Human-in-the-Loop Applications}
     
-    \author{\Large M. Olguín, J. Wang, M. Satyanarayanan, J. Gross}
+    \author{\Large Manuel Olguín, Junjue Wang,\\Mahadev Satyanarayanan, James Gross}
     \maketitle
     
     \begin{pcolumns}[3]
