final final fixes

--- a/poster.tex
+++ b/poster.tex
@@ -56,7 +56,7 @@ mincitenames=1]{biblatex}
         \begin{pcolumn}[2]
             \begin{pframe}[.7]
                 \section{Abstract}
-                Benchmarking human-in-the-loop application running on edge computing infrastructure is complex given their nature, which heavily depends on the actions taken by the \emph{human} user.
+                Benchmarking human-in-the-loop applications running on edge computing infrastructure is complex given their nature, which heavily depends on the actions taken by the human user.
                 This limits reproducibility as well as feasibility of performance evaluations.
                 We propose a methodology and present a benchmarking suite that can address these challenges.
                 Our core idea rests on recording traces of these applications which are played out in a controlled fashion based on an underlying model of human behavior.
